@@ -1,3 +1,8 @@
+2007-02-15  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* Plugin: new unreplied() method to handle PRIVMSGs which have not
+	been replied to.
+
 2007-02-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* Remote Service Provider: from an idea by halorgium <rbot@spork.in>,
